--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,4 +81,12 @@
   body {
     @apply bg-background text-foreground;
   }
+  .hide-arrows::-webkit-outer-spin-button,
+  .hide-arrows::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  .hide-arrows {
+    -moz-appearance: textfield;
+  }
 }
